--- a/src/app/home/headline/headline.component.html
+++ b/src/app/home/headline/headline.component.html
@@ -1,5 +1,5 @@
 <section class="module-header full-height parallax bg-dark bg-dark-30 d-none d-sm-block" 
-style="background-image: url('assets/images/bg.jpg'); opacity:0.9;"
+style="background-color:black; "
 id="home">
   <div class="container">
     <div class="row">
